kustomize/overlays/prod/frontend-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: frontend
          image: atkaridarshan04/bookstore-frontend:v2  # Prod-specific image
